--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
   </head>
   <body>
     <h1>Embed Files in Arduino Source Code</h1>
+    <section class="section bottom-divider">
+      <section class="sub-section">
+        <div class="column" id="file-input-column">
+          <h2 class="sub-section-title">1. Select image</h2>
+          <div class="note upload-note">All processing is done locally in your browser; your images are not uploaded or stored anywhere online.</div>
+          <input type="file" id="file-input" name="file-input" multiple/><br />
+        </div>
+        <div class="column column-center">
+          <h2 class="sub-section-title">or</h2>
+        </div>
+        <div class="column column-right">
+          <h2 class="sub-section-title">1. Paste byte array</h2>
+          <textarea id="byte-input" class="byte-input"></textarea><br />
+          <div class="text-input-size">
+            <input type="number" min="0" id="text-input-width" class="size-input" value="128" /> x
+            <input type="number" min="0" id="text-input-height" class="size-input" value="64" /> px
+          </div>
+          <div>
+            <button onclick="handleTextInput('horizontal')">Read as horizontal</button>
+            <button onclick="handleTextInput('vertical')">Read as vertical</button>
+          </div>
+          <div class="note">Read images appear at step 3 below</div>
+        </div>
+      </section>
+    </section>
   </body>
   <script>
     
