--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <input type="file" id="file-input" name="file-input" multiple /><br/>
     <div><button onclick="handleTextInput('horizontal')">Convert</button></div>
     <h2>2. Copy the cpp copde to your Arduino sketch</h2>
-    <input type="textarea" id="cpp-output" name="cpp-output" /><br/>
+    <input type="textarea" id="cpp-output" name="cpp-output" rows="4" cols="50" /><br/>
   </body>
   <script>
     function init() {
