improve copy to clipboard

--- a/index.html
+++ b/index.html
@@ -61,14 +61,10 @@
 
     function copyToClipboard() {
       // Get the text field
-      var copyText = document.getElementById("cpp-output");
+      const copyText = document.getElementById("cpp-output")?.value | "";
 
-      // Select the text field
-      copyText.select();
-      copyText.setSelectionRange(0, 99999); // For mobile devices
-
-      // Copy the text inside the text field
-      navigator.clipboard.writeText(copyText.value);
+      // Copy the text to the clipboard
+      navigator.clipboard.writeText(copyText);
     }
   </script>
 </html>
